[tool.poetry]
name = "diffusion-models"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
scipy = "^1.11.3"
tqdm = "^4.66.1"
torch = "^2.1.0"
lightning = "^2.1.0"
tensorboard = "^2.15.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
